--- a/src/themes.css
+++ b/src/themes.css
@@ -32,6 +32,7 @@
   --code-background: rgb(19, 19, 13);
   --code-border: rgb(52, 58, 60);
   --fakepost-subscribe: url('/assets/fakepost-subscribe-dark.png');
+  --filter50: brightness(50%);
   --filter80: brightness(80%);
   --filter90: brightness(90%);
   --gray: #3e3e3e;
@@ -77,6 +78,7 @@
   --thumbnail-icon-text: url('/assets/thumbnail-icon-text-dark.png');
   --upload-box-background: rgb(15, 15, 15);
   --upload-box-border: 2px dashed #404649;
+  --upload-box-text-color: #d7d3cd;
   --yellow: rgb(200, 171, 0);
   --yellow-box-background: rgb(56, 45, 0);
   --yellow-box-contrast: rgb(163, 130, 0);
@@ -121,6 +123,7 @@
   --code-background: #fcfcfb;
   --code-border: #e6e6de;
   --fakepost-subscribe: url('/assets/fakepost-subscribe.png');
+  --filter50: brightness(100%);
   --filter80: brightness(100%);
   --filter90: brightness(100%);
   --gray: #c0c0c0;
@@ -166,6 +169,7 @@
   --thumbnail-icon-text: url('/assets/thumbnail-icon-text.png');
   --upload-box-background: #fafafa;
   --upload-box-border: 2px dashed #bbb;
+  --upload-box-text-color: #ddd;
   --yellow: goldenrod;
   --yellow-box-background: #fff7d7;
   --yellow-box-contrast: #ffd634;
